--- a/scss/custom/variables.scss
+++ b/scss/custom/variables.scss
@@ -139,7 +139,7 @@ $offcanvas-font-color: $blue;
 $offcanvas-header-font-color: $white;
 
 // padding and margins
-$block-padding: 3rem 1.5rem;
+$block-padding: .5rem 2rem;
 $block-padding-small: 3rem 2rem;
 $block-padding-medium: 4rem 2rem;
 $block-padding-large: 4rem;
